--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="../startbootstrap-agency-gh-pages/images/img/about/2.png" alt="Venmo Logo" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="images/img/about/2.png" alt="Venmo Logo" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">Venmo</h4>
@@ -179,7 +179,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="../startbootstrap-agency-gh-pages/images/img/about/3.png" alt="Zelle Logo" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="images/img/about/3.png" alt="Zelle Logo" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">Zelle</h4>
@@ -219,7 +219,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <a href="../startbootstrap-agency-gh-pages/html/aboutme.html"><img class="mx-auto rounded-circle" src="images/img/team/Marriott School Profile.jpeg" alt="Formal Profile Picture" /></a>
+                            <a href="html/aboutme.html"><img class="mx-auto rounded-circle" src="images/img/team/Marriott School Profile.jpeg" alt="Formal Profile Picture" /></a>
                             <h4>Braden Allred</h4>
                             <p class="text-muted">Founder</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/braden.allred.7"><i class="fab fa-facebook-f"></i></a>
