--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                         <li class="nav-item"><a class="nav-link" href="#about">Payments</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">About the Owner</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="html/tableau.html">Tableau</a></li>
                     </ul>
                 </div>
             </div>
@@ -219,7 +218,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <a href="html/aboutme.html"><img class="mx-auto rounded-circle" src="images/img/team/Marriott School Profile.jpeg" alt="Formal Profile Picture" /></a>
+                            <img class="mx-auto rounded-circle" src="images/img/team/Marriott School Profile.jpeg" alt="Formal Profile Picture" /></a>
                             <h4>Braden Allred</h4>
                             <p class="text-muted">Founder</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/braden.allred.7"><i class="fab fa-facebook-f"></i></a>
